# Image-style-transfer

./: .gitignore  GEMINI.md  PLAN.md  PRD.md  README.md  feedback.md  onnx-alt.md  package-lock.json  package.json  tsconfig.tsbuildinfo
public/: sw.js
public/models/: manifest.json  mosaic.onnx
rust/: Cargo.toml
rust/src/: image_ops.rs  infer.rs  lib.rs  tests.rs
src/app/: layout.tsx  page.tsx
src/app/image/: page.tsx
src/app/video/: page.tsx
src/components/: CanvasDisplay.tsx  ControlPanel.tsx  ImageControlPanel.tsx  Navbar.tsx  VideoControlPanel.tsx
src/hooks/: useImageUploader.ts  useModelRunner.ts
src/wasm/pkg/: image_style_transfer.d.ts  image_style_transfer.js  image_style_transfer_bg.wasm  image_style_transfer_bg.wasm.d.ts  package.json
