[package]
name = "image-style-transfer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wonnx = "0.5.1"
wgpu = "0.19"
image = "0.25"
thiserror = "1.0"

# Wonnx requires getrandom with the "js" feature when compiling for wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
